2009-02-27  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
	Support async query info

        * test/test-query-info-stream.c:
	Test async query info

2009-02-27  Alexander Larsson  <alexl@redhat.com>

        * common/Makefile.am:
        * common/gvfsfileinfo.[ch]:
	Add (de)marshalling functions for GFileInfos.

        * common/gvfsdaemonprotocol.h:
	Add protocol extensions for query info over streams

        * client/gdaemonfileinputstream.c:
	Support sync query_info.

        * daemon/Makefile.am:
        * daemon/gvfsjobqueryinforead.[ch]:
        * daemon/gvfsbackend.h:
	Added query info job and backend call for input streams

        * daemon/gvfsbackendtest.c:
	Implement query_info_on_read

        * daemon/gvfschannel.[ch]:
        Add g_vfs_channel_send_info

        * daemon/gvfsreadchannel.c:
        (read_channel_handle_request):
	Handle query info

        * test/Makefile.am:
        * test/test-query-info-stream.c:
	Add test for stream query info.

2009-02-26  Alexander Larsson  <alexl@redhat.com>

	Bug 570977 – sftp backend sends trailing zeros to communication data

	* daemon/gvfsbackendsftp.c (get_data_from_command_stream):
	Use g_memory_output_stream_get_data_size instead of old
	workaround.
	Patch from Pekka Vuorela

2009-02-26  David Zeuthen  <davidz@redhat.com>

	Implement --device option for gvfs-mount.

	This allows things like this

        $ gvfs-mount -d /dev/sdb3
        The device "Generic STORAGE DEVICE" contains encrypted data on partition 3.
        Password:
        Mounted /dev/dm-0 at /media/Encrypted Stuff

	Reviewed by: Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-mount.c: See above.

2009-02-26  David Zeuthen  <davidz@redhat.com>

	Lots of proxy monitor fixes.

	Reviewed by: Alexander Larsson  <alexl@redhat.com>

	o  add support for proxying GMountOperation to the remote volume
	   monitor process.

	o  add support for proxying GCancellable to the remote volume